deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: jenkins
  namespace: devdarshan
spec:
  replicas: 4
  selector:
    matchLabels: 
      app: jenkins
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      volumes:
      - name: "jenkins-data"
        hostPath:
          path: "/root/k8efs"
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        volumeMounts:
          - name: "jenkins-data"
            mountPath: "/var/jenkins_home"
