mysecondpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  volumes:
    - name: "jenkins-data"
      hostPath:
        path: "/root/k8efs"
  nodeSelector:
    size: small
  containers:
  - name: jenkins
    image: jenkins/jenkins:lts
    volumeMounts:
      - name: "jenkins-data"
        mountPath: "/var/jenkins_home"
