pod-config.yaml
apiVersion: v1

kind: Pod

metadata:

  name: configmap-demo-pod

spec:

  containers:

    - name: demo

      image: alpine

      command: ["sleep", "3600"]

      volumeMounts:

      - name: config

        mountPath: "/config"

        readOnly: true

  volumes:

  # You set volumes at the Pod level, then mount them into containers inside that Pod

  - name: config

    configMap:

      # Provide the name of the ConfigMap you want to mount.

      name: game-demo

      # An array of keys from the ConfigMap to create as files

      items:

      - key: "game.properties"

        path: "game.properties"

      - key: "user-interface.properties"

        path: "user-interface.properties"
