secret-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
  labels:
    name: secret-test
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: myfile
  containers:
  - name: tomcat
    image: ddarshi97/tomcat:1.1
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: "/usr/local/tomcat/webapps/"
