external.yaml
apiVersion: v1
kind: Service
metadata: 
  name: tomcat-ext
spec:
  selector:
    app: tomcat
  ports: 
  - name: tomcat
    protocol: TCP
    targetPort: 8080
    port: 8080
  - name: nginx
    protocol: TCP
    targetPort: 80
    port: 80
  externalIPs:
    - 3.112.230.169
