privateimagepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
  labels:
    app: tomcat
spec:
  containers:
  - name: private-reg-container
    image: 889165067927.dkr.ecr.ap-northeast-1.amazonaws.com/tomcat:1.2
  imagePullSecrets:
  - name: myregistrykey

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-nodeport
spec:
  selector:
    app: tomcat
  type: NodePort
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
      nodePort: 30008
