jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
        - pathType: Prefix
          path: /jenkins
          backend:
            service:
              name: jenkins
              port:
                number: 8080
